--- a/专业课/人工智能/人工智能复习笔记/绪论_151221115206.md
+++ b/专业课/人工智能/人工智能复习笔记/绪论_151221115206.md
@@ -84,7 +84,7 @@
 
 #### 联结主义
 
-联结主义又称仿生学派、或者生理学派，是基于生物进化论的AI学派，是在围观上模拟人的思维过程。
+联结主义又称仿生学派、或者生理学派，是基于生物进化论的AI学派，是在微观上模拟人的思维过程。
 
 + 理论基础： **神经网络及神经网络间的连接机制与学习算法。**
 + 本质： 用人脑的并行分布处理模式来表现认知过程。
@@ -92,7 +92,7 @@
 
 ### 行为主义
 
-行为主义又称为进化主义或正控制论学派，其基本原理是控制论和“感知-动作”型控制系统。
+行为主义又称为进化主义或控制论学派，其基本原理是控制论和“感知-动作”型控制系统。
 
 + 只能取决于感知和行动
 + 人工智能可以像人类智能一样实现逐步进化
