--- a/专业课/人工智能/人工智能复习笔记/知识的表示方法_151221181254.md
+++ b/专业课/人工智能/人工智能复习笔记/知识的表示方法_151221181254.md
@@ -164,7 +164,7 @@ flowchart LR
 
 ## 语义网络表示法
 
-语义网络是知识式的一种图解表示，他由节点和弧形组成。节点用于便是实体、概念和事件等，弧线用于表示节点间的关系。
+语义网络是知识式的一种图解表示，他由节点和弧形组成。节点用于表示实体、概念和事件等，弧线用于表示节点间的关系。
 
 + 语义网络的组成部分
 
